K8S/commands-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: commands-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: commandsservices
  template:
    metadata:
      labels:
        app: commandsservices
    spec:
      containers:
        - name: commandsservices
          image: igeg/commandsservices:latest
---
apiVersion: v1
kind: Service
metadata: 
  name: commands-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: commandsservices
  ports:
  - name: commandsservices
    protocol: TCP
    port: 80
    targetPort: 80
