K8S/platforms-np-srv.yaml
apiVersion: v1
kind: Service
metadata: 
  name: platformsnpservice-srv
spec:
  type: NodePort
  selector:
    app: platformservices
  ports:
    - name: platformservices
      protocol: TCP
      port: 80
      targetPort: 80
